# 02-exploratory-data-analysis

./: README.md
steam/: Makefile  README.md  pyproject.toml
steam/docs/: mkdocs.yml
steam/docs/docs/: index.md
steam/steam/: __init__.py  dataset.py  features.py  plots.py
steam/steam/modeling/: predict.py  train.py
tinder/: Makefile  README.md  pyproject.toml
tinder/docs/: mkdocs.yml
tinder/docs/docs/: index.md
tinder/tinder/: __init__.py  dataset.py  features.py  plots.py
tinder/tinder/modeling/: predict.py  train.py
