[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "steam"
version = "0.0.1"
description = "Ubisoft's project analyzes the Steam videogame market using PySpark and Databricks. The goal is to understand factors affecting game popularity and sales, identifying trends across genres, platforms, and publishers for a new game release."
authors = [
  { name = "nclsprsnw" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["steam"]
include = ["pyproject.toml", "steam/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["steam"]
force-sort-within-sections = true

