[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tinder"
version = "0.0.1"
description = "Tinder's project analyzes speed dating data to understand what drives second date interest. Using descriptive statistics and visualizations, the goal is to uncover key attributes and factors influencing mutual attraction, addressing a decrease in app matches."
authors = [
  { name = "nclsprsnw" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["tinder"]
include = ["pyproject.toml", "tinder/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["tinder"]
force-sort-within-sections = true

